# hyperbase

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  authors.md  index.md  installation.md  make.bat  pubs-cases.md  team.md  thanks.md
docs/manual/: api.md  backends.md  cli.md  corefs.md  discovering-patterns.md  hyperedge-operations.md  hyperedges.md  hypergraph-operations.md  meaning.md  notation.md  notebooks.md  overview.md  parsers.md  parsing.md  patterns.md  readers.md  special-relations.md
docs/source/: conf.py  index.rst  installation.rst  pubs-cases.rst  thanks.rst  tutorials.rst
docs/source/manual/: api.rst  (+11 more)
docs/tutorials/: claims.md  conflicts.md  hypergraph-operations.md  index.md  parsing-a-book.md  parsing-a-sentence.md  playing-with-hyperedges.md
examples/: parse-text.py
notebooks/: hypergraph.ipynb  parser.ipynb
scripts/: extract-remaining-sentences.py  extract-sentences.py  generate-alpha-training-data.py  generate-parser-training-data.py  manual-parser-test.py  select-alpha-features.py  split-parser-training-data.py  test-alpha.py  test-parser.py  update-parser-tests.py
skeletons/: parser_xx.py
src/hyperbase/: __init__.py  __main__.py  builders.py  cli.py  constants.py  correctness.py  hyperedge.py  hypergraph.py  loaders.py  notebook.py  transforms.py
tests/: hypergraph.py  test_badness.py  test_corefs.py  test_correctness.py  test_correctness_errors.py  test_english.py  test_hyperedge.py  test_hyperedge_text.py  test_load_edges.py  test_malformed_input.py  test_parser_plugin.py  test_patterns.py  test_performance.py  test_permutations.py  test_reader_plugin.py
(+59 files in other folders)
