[project]
name = "hyperbase"
dynamic = ["version"]
description = "A foundational library for Semantic Hypergraphs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Telmo Menezes et al.", email = "telmo@telmomenezes.net" },
]
keywords = [
    "NLP",
    "AI",
    "Knowledge Representation",
    "Knowledge Systems",
    "Natural Language Understanding",
    "Text Analysis",
    "Cognition",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "tqdm>=4.65.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.scripts]
hyperbase = "hyperbase.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.2.2",
    "pre-commit>=3.6.2",
    "types-passlib>=1.7.7.20240106",
    "coverage>=7.4.3",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "click==8.2.1",  # pinned to prevent bug with mkdocs reload on change
    "pytest>=9.0.0",
]

[project.urls]
Homepage = "https://hyperquest.ai/hyperbase"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperbase"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"
